--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,13 @@
+blinker==1.9.0
+click==8.2.1
+colorama==0.4.6
 Flask==3.0.3
-Werkzeug==3.0.3
-Pillow==10.4.0
-pytesseract==0.3.13
+gunicorn==23.0.0
+itsdangerous==2.2.0
+Jinja2==3.1.6
+MarkupSafe==3.0.2
+packaging==25.0
+pillow==10.4.0
 PyPDF2==3.0.1
-gunicorn
-
+pytesseract==0.3.13
+Werkzeug==3.0.3
